--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ div{
     margin: 0 auto;
     padding: 30px 30px 10px 30px;
     box-shadow: 10px 10px 10px #2e1010;
+    border: 3px solid white;
 }
 
 .contact{
@@ -40,7 +41,7 @@ ul{
 }
 
 .dates{
-    font-size: 15px;
+    font-size: 16px;
     padding: 0px 5px 10px 3px;
     color:#622525;
 }
